--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -33,9 +34,11 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-bottom: 10px;
 }
 
-#app {
+#app,
+#cute {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -48,9 +51,11 @@ h1 {
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em #3178c6aa);
 }
@@ -63,7 +68,8 @@ h1 {
   color: #888;
 }
 
-button {
+button,
+#input_name {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -71,26 +77,45 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+#button {
+  cursor: pointer;
+}
+
+button:hover,
+#input_name:hover {
   border-color: #646cff;
 }
+
+#input_name:focus,
+#input_name:focus-visible {
+  outline: none;
+}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
-  button {
+
+  button,
+  #input_name {
     background-color: #f9f9f9;
   }
-}
+
+  button,
+  #input_name {
+    border: 1px solid #1a1a1a;
+  }
+} */
